PEG-17 Possibility to go on a scenario details' page (empty at the moment). Dropdown added with pure CSS without Bootstrap. Project structure changed with static and templates in the pegapp. Settings fixed. Scss compressor added, bootstrap added with scss and imported in style.scss.

--- a/paradox/pegapp/static/style.scss
+++ b/paradox/pegapp/static/style.scss
@@ -1,3 +1,5 @@
+@import './scss/bootstrap';
+
 $stc_brown: #B47339;
 $stc_brown_a: rgba($stc_brown, 40%);
 
@@ -36,8 +38,7 @@ $stc_brown_a: rgba($stc_brown, 40%);
   img {
     min-height: 400px;
     max-height: 600px;
-    border: solid;
-    border-color: $stc_brown_a;
+    @include pretty-borders();
     object-fit: cover;
     object-position: center;
   }
